--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -1,7 +1,7 @@
 ---
 import Button from './ui/Button.astro';
 ---
-<header class="w-full py-8 px-10 flex items-center justify-between" style="background-color: #d9d8d7;">
+<header class="w-full py-8 px-10 flex items-center justify-between relative z-50" style="background-color: #d9d8d7;">
   <div class="text-base md:text-lg font-sans tracking-tight" style="color: #262626; font-weight: normal;">
     <a id="obf-email" href="#" aria-label="Email Dale Rogers" class="hover:underline focus:underline">
       <span>&#104;&#101;&#108;&#108;&#111;&#64;&#100;&#97;&#108;&#101;&#114;&#111;&#103;&#101;&#114;&#115;&#46;&#99;&#111;&#109;&#46;&#97;&#117;</span>
